force-app/main/default/objects/QB_API_Call__c/QB_API_Call__c.object-meta.xml
<CustomObject>
    <label>QB API Call</label>
    <nameField>
        <label>Type</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QB API Calls</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>