force-app/main/default/objects/QB_API_Call__c/fields/Delete__c.field-meta.xml
<CustomField>
    <fullName>Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delete?</label>
    <type>Checkbox</type>
</CustomField>