force-app/main/default/objects/QB_API_Call__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <label>Group</label>
    <length>70</length>
    <type>Text</type>
</CustomField>