force-app/main/default/objects/QB_API_Call__c/fields/Non_Torc_User__c.field-meta.xml
<CustomField>
    <fullName>Non_Torc_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Non Torc User</label>
    <referenceTo>Non_Torc_User__c</referenceTo>
    <relationshipLabel>QB API Calls</relationshipLabel>
    <relationshipName>QB_API_Calls</relationshipName>
    <type>Lookup</type>
</CustomField>