force-app/main/default/objects/QB_API_Call__c/fields/QB_Api_Call_Master__c.field-meta.xml
<CustomField>
    <fullName>QB_Api_Call_Master__c</fullName>
    <label>QB Api Call Master</label>
    <referenceTo>QB_Api_Call_Master__c</referenceTo>
    <relationshipLabel>QB API Calls</relationshipLabel>
    <relationshipName>QB_API_Calls</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>