force-app/main/default/objects/QB_API_Call__c/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <label>Sequence</label>
    <type>AutoNumber</type>
</CustomField>