force-app/main/default/objects/QB_API_Call__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Delete__c</columns>
    <columns>Group__c</columns>
    <columns>Processed__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Input__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>