force-app/main/default/objects/QB_API_Call__c/listViews/Bill.listView-meta.xml
<ListView>
    <fullName>Bill</fullName>
    <columns>NAME</columns>
    <columns>Group__c</columns>
    <columns>Processed__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>bill</value>
    </filters>
    <label>Bill</label>
</ListView>